# axe1

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  axe_common.cmake  gen_vs2022.bat  install_vcpkg_packages.bat  vs-chromium-project.txt
src/core/: CMakeLists.txt
src/core/src/: axe_core-config.h  axe_core-pch.h  axe_core.h
src/core/src/axe_core/allocator/: Allocator.cpp  Allocator.h  LinearAllocator.cpp  LinearAllocator.h
src/core/src/axe_core/app/: AppBase.cpp  AppBase.h  ConsoleApp.cpp  ConsoleApp.h  ProjectSettings.cpp  ProjectSettings.h
src/core/src/axe_core/base/: AXE_COMPILER.h  AXE_COMPILER_GCC.h  AXE_COMPILER_VC.h  AXE_OS.h  AXE_OS_UNIX.h  AXE_OS_WINDOWS.h  BitUtil.h  ByteOrder.h  Error.cpp  Error.h  Object.cpp  Object.h  Reflection.cpp  Reflection.h  TypeTraits.h  UnitTest.cpp  UnitTest.h  axe_base.h  axe_macro.h
src/core/src/axe_core/cmd/: Cmd.cpp  Cmd.h  CommandLine.cpp  CommandLine.h  ShellCmd.cpp  ShellCmd.h
src/core/src/axe_core/detect_platform/: axe_detect_compiler_gcc.h  axe_detect_compiler_vc.h  axe_detect_platform.h
src/core/src/axe_core/file/: Directory.cpp  Directory.h  File.cpp  File.h  FilePath.cpp  FilePath.h  FileStream.cpp  FileStream.h  MemMapFile.cpp  MemMapFile.h
src/core/src/axe_core/glew/: glew.cpp
src/core/src/axe_core/graph/: Color.h  ColorUtil.h
src/core/src/axe_core/input/: UIEvent.h
src/core/src/axe_core/log/: Log.cpp  Log.h
src/core/src/axe_core/math/: BBox3.h  Frustum3.cpp  Frustum3.h  Mat4.cpp  Mat4.h  Mat4_Basic.h  Mat4_SSE.h  Math.h  MathCamera3.cpp  MathCamera3.h  MathGeometry.cpp  MathGeometry.h  Quat4.cpp  Quat4.h  Ray3.cpp  Ray3.h  Rect2.h  Tuple2.h  Tuple3.h  Tuple4.h  Vec2.cpp  Vec2.h  Vec2_Basic.h  Vec2_SSE.h  Vec3.cpp  Vec3.h  Vec3_Basic.h  Vec3_SSE.h  Vec4.cpp  Vec4.h  Vec4_Basic.h  Vec4_SSE.h
src/core/src/axe_core/native_ui/: NativeUI.cpp  NativeUI.h  NativeUI_Common.h
src/core/src/axe_core/native_ui/base/: NativeUIApp_Base.cpp  NativeUIApp_Base.h  NativeUIWindow_Base.cpp  NativeUIWindow_Base.h
src/core/src/axe_core/native_ui/win32/: NativeUIApp_Win32.cpp  NativeUIApp_Win32.h  NativeUIWindow_Win32.cpp  NativeUIWindow_Win32.h  (+4 more)
src/core/src/axe_core/net/: Poll.h  SockAddr.cpp  SockAddr.h  Socket.cpp  Socket.h
src/core/src/axe_core/pointer/: ComPtr.h  SPtr.h  WPtr.h
src/core/src/axe_core/string/: Fmt.h  Lexer.cpp  Lexer.h  StringUtil.cpp  StringUtil.h  UtfUtil.h
(+43 files in other folders)
